<resources>
    <string name="app_name">Shopping Lists</string>
    <string name="groceries_done">Groceries done:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_shopping_list">Add new shopping list</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="add_new_item">Add new item</string>
    <string name="quantity2">Quantity:</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="are_you_sure_you_want_to_delete_this_shopping_list">Are you sure you want to delete this shopping list?</string>
    <string name="unarchive">Unarchive</string>
    <string name="archive">Archive</string>
    <string name="add_item_button">Add item button</string>
    <string name="archive_unarchive_button">Archive/unarchive button</string>
    <string name="add_shopping_list_button">Add shopping list button</string>
</resources>